unpackaged/main/default/objects/bt_base__Form_Submission__c/bt_base__Form_Submission__c.object-meta.xml
<CustomObject>
    <description>Submissions from forms or custom questions related to Blackthorn apps.</description>
    <label>BT Form Submission</label>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>Form Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>