unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Form Submission was submitted by a matching Account.</description>
    <inlineHelpText>If this Form Submission was submitted by a matching Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>