unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Form Submission was submitted by a matching Contact.</description>
    <inlineHelpText>If this Form Submission was submitted by a matching Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>