unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Error__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Error__c</fullName>
    <description>If there was an error processing this Form Submission.</description>
    <inlineHelpText>If there was an error processing this Form Submission.</inlineHelpText>
    <label>Error</label>
    <type>TextArea</type>
</CustomField>