unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Form__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form that originated this Form Submission.</description>
    <inlineHelpText>The Form that originated this Form Submission.</inlineHelpText>
    <label>BT Form</label>
    <referenceTo>bt_base__Form__c</referenceTo>
    <relationshipLabel>BT Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>