unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Lead__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Form Submission was submitted by a matching Lead.</description>
    <inlineHelpText>If the Form Submission was submitted by a matching Lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>