unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__Processed__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This submission was processed successfully.</description>
    <inlineHelpText>This submission was processed successfully.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>