unpackaged/main/default/objects/bt_base__Form_Submission__c/fields/bt_base__User__c.field-meta.xml
<CustomField>
    <fullName>bt_base__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this form was submitted by a User it&#39;s stored here.</description>
    <inlineHelpText>If this form was submitted by a User it&#39;s stored here.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>